Refactored: * fixed small bugs * made the code more readable and clean

--- a/frontend/src/styles/About.css
+++ b/frontend/src/styles/About.css
@@ -30,3 +30,12 @@
     background-color: #181818;
     color: #f8f9fa;
 }
+
+.about-container a {
+    color: #9e54f8;
+    text-decoration: none;
+}
+
+.about-container a:hover {
+    color: #aa70f1;
+}
